--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -7,6 +7,11 @@ header {
   display: flex;
   align-items: center;
   padding-left: 1rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 footer {
@@ -24,6 +29,7 @@ footer {
   display: flex;
   flex-direction: row;
   min-height: 100vh;
+  margin-top: 3.5rem;
 }
 
 .sideNavbar {
